# ClearMedia

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  ClearMedia.code-workspace  LICENSE  README.md  docker-compose.yml  frontendPRD.md  mvp.md  mytest.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tests.md
backend/: Dockerfile  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/.cursor/rules/: stack.mdc
backend/app/: api.py  config.py  crud.py  db.py  processor.py  scanner.py
backend/app/api/: __init__.py  deps.py
backend/app/api/endpoints/: __init__.py  config.py  media.py
backend/app/core/: __init__.py  linker.py  llm.py  models.py  schemas.py  tmdb.py
backend/app/core/utils/: config_loader.py
backend/app/services/: __init__.py  config_service.py
backend/app/services/config/: __init__.py  service.py
backend/app/services/media/: __init__.py  path_generator.py  processor.py  producer.py  scanner.py  status_manager.py  types.py
backend/app/tests/: conftest.py  test_api.py  test_background_scanner.py  test_config.py  test_config_reload_and_db_priority.py  test_config_service.py  test_config_video_extensions.py  test_crud.py  test_linker.py  test_llm.py  test_parse_video_extensions.py  test_path_generator.py  test_process_single_file.py  test_processor.py  test_producer.py  test_query_validation.py  test_scanner.py  test_status_manager.py  test_tmdb.py  test_validate_file.py
frontend/: .dockerignore  Dockerfile  README.md  eslint.config.js  package.json  tailwind.config.ts  tsconfig.app.json  (+1 more)
(+33 files in other folders)
