[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "async-lru>=2.0.5",
    "fastapi>=0.115.13",
    "loguru>=0.7.3",
    "openai>=1.88.0",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "sqlmodel>=0.0.24",
    "tenacity>=9.1.2",
    "tmdbsimple>=2.9.1",
    "uvicorn[standard]>=0.34.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pyfakefs>=5.8.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "ruff>=0.11.13",
]
